--- a/configServer/package.json
+++ b/configServer/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "del": "^2.2.0",
+    "events": "^1.1.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "extend": "^3.0.0",
@@ -50,6 +51,7 @@
     "run-sequence": "^1.1.5",
     "semantic-ui": "^2.1.8",
     "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.5",
     "yamljs": "^0.2.7"
   }
 }
