--- a/gatewayServer/package.json
+++ b/gatewayServer/package.json
@@ -14,6 +14,7 @@
     "hjs": "~0.0.6",
     "morgan": "~1.6.1",
     "request": "^2.71.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io-client": "^1.4.5"
   }
 }
