--- a/android/WisperoGW/app/build.gradle
+++ b/android/WisperoGW/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
 
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.wispero.wisperogw"
         minSdkVersion 19
@@ -25,5 +26,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile "com.google.android.gms:play-services-gcm:9.2.0"
     compile 'com.pubnub:pubnub-android:3.7.10'
+    compile 'com.android.support:design:24.1.1'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
