--- a/android/WisperoGW/app/src/main/AndroidManifest.xml
+++ b/android/WisperoGW/app/src/main/AndroidManifest.xml
@@ -19,14 +19,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SignupActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".DeviceListActivity"></activity>
+        <activity android:name=".ConfigConsoleActivity"></activity>
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
