--- a/pubnub-client/package.json
+++ b/pubnub-client/package.json
@@ -19,6 +19,7 @@
     "fs": "0.0.2",
     "hashmap": "^2.0.6",
     "hjs": "~0.0.6",
+    "ipinfo": "^1.3.3",
     "morgan": "~1.6.1",
     "ngrok": "^2.2.2",
     "noble": "^1.6.0",
